# codexmill

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
docs/: PRODUCTION.md  SECURITY.md
docs/adr/: 0001-record-architecture-decisions.md  0002-agpl-license.md  0003-backend-agnostic-llm.md  0004-staged-pipeline.md  0005-positioning-vs-prior-art.md  0006-deterministic-writing-prompts.md  0007-web-frontend.md  0008-optional-oidc.md  0009-gui-configurable-oidc.md  0010-persistence-library.md  0011-streaming-progress.md  0012-saved-llm-settings.md  0013-ux-redesign.md  0014-drop-fake-demo-bundle-sample.md  0015-worldbuilding-stage.md  0016-exports-docx-obsidian.md  0017-regenerate-a-stage.md  0018-series-continuity.md  0019-packaging-ci.md  0020-frontend-redesign.md  0021-usage-meter.md  0022-per-user-quotas.md  0024-local-accounts.md  0025-multi-user-uac-and-oidc.md  0026-persistence-foundation-sqlalchemy-postgres.md  0027-per-user-bring-your-own-cloud-key.md
examples/: minimal.yaml  novel.yaml  series.yaml
scripts/: check_docs.py
src/codexmill/: __init__.py  __main__.py  auth_reset.py  cli.py  config.py  export.py  llm.py  pipeline.py  render.py  schemas.py  series.py
src/codexmill/beats/: __init__.py
src/codexmill/migrations/: env.py
src/codexmill/migrations/versions/: 0001_baseline.py  0002_user_llm.py  0003_bible_model.py
src/codexmill/stages/: __init__.py  chapters.py  characters.py  metadata.py  premise.py  prompts.py  series_plan.py  structure.py  surprise.py  worldbuilding.py
src/codexmill/web/: __init__.py  app.py  auth.py  crypto.py  db.py  library.py  model_filter.py  models.py  oidc_provision.py  passwords.py  providers.py  store.py  users.py
src/codexmill/web/static/: admin.html  app.css  index.html  manifest.webmanifest  sample.md  sw.js
tests/: conftest.py  test_admin_users.py  test_auth.py  test_auth_reset.py  test_backend.py  test_chapters.py  test_characters.py  test_cli_smoke.py  test_docs.py  test_export.py  test_library.py  test_llm_parse.py  test_model_filter.py  test_oidc_provision.py  test_pipeline_models.py  test_prompts.py  test_rate_limit.py  test_regenerate.py  test_series.py  test_series_web.py  test_settings.py  test_stream.py  test_user_byo.py  test_user_engine.py  test_users.py  test_web.py
